--- a/MovieRental/MovieRental.vcxproj
+++ b/MovieRental/MovieRental.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\FileHandler.cpp" />
     <ClCompile Include="src\CustomerList.cpp" />
     <ClCompile Include="src\Customer.cpp" />
     <ClCompile Include="src\MovieRental.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="src\MovieList.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\FileHandler.h" />
     <ClInclude Include="src\CustomerList.h" />
     <ClInclude Include="src\Customer.h" />
     <ClInclude Include="src\MovieRental.h" />
