fixedReadFromFile, added prompt user

--- a/MovieRental/MovieRental.vcxproj
+++ b/MovieRental/MovieRental.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="src\UserInterface.h" />
     <ClInclude Include="src\MovieList.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\CustomerRent.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
